// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Registration action creators createIdentity should attempt to create an identity 1`] = `
Array [
  Object {
    "type": "SET_LOADING_MSG",
    "value": "Fueling with ether",
  },
  Object {
    "type": "SET_LOADING_MSG",
    "value": "Registering decentralized identity",
  },
  Object {
    "type": "DID_SET",
    "value": "did:jolo:mockdid",
  },
  Object {
    "type": "SET_LOADING_MSG",
    "value": "Preparing launch",
  },
  Object {
    "actions": Array [
      Object {
        "params": Object {
          "mnemonic": "exhibit history avoid kit gaze pulse yellow portion hold lottery panda figure",
        },
        "routeName": "SeedPhrase",
        "type": "Navigation/NAVIGATE",
      },
    ],
    "index": 0,
    "key": undefined,
    "type": "Navigation/RESET",
  },
]
`;

exports[`Registration action creators createIdentity should attempt to create an identity 2`] = `
Array [
  Array [
    Object {
      "data": "4f8d84403d760b5b3fc5426c90827dab",
      "pass": "secret",
    },
  ],
  Array [
    Object {
      "data": "Ky3KXReecYBMU9Z3DtT4eqSTNnmvLU2ZhNdhA73HLzJ5Vyem1Xw7",
      "pass": "secret",
    },
  ],
  Array [
    Object {
      "data": "Kx91VxnTCKqtsQjJLv4TB6YDCnwaiKYwsgEXqk6TzTjijzyx5xEY",
      "pass": "secret",
    },
  ],
]
`;

exports[`Registration action creators createIdentity should attempt to create an identity 3`] = `
Array [
  Array [
    Object {
      "controllingKey": Object {
        "encryptedWif": "U2FsdGVkX19kQYx6vN6GahoZ9mbabreviated+=",
        "entropySource": Object {
          "encryptedEntropy": "U2FsdGVkX19kQYx6vN6GahoZ9mbabreviated+=",
          "timestamp": 946681200000,
        },
        "keyType": "ECDSA secp256k1",
        "path": "m/73'/0'/0'/0",
      },
      "did": "did:jolo:mockdid",
    },
  ],
]
`;

exports[`Registration action creators createIdentity should attempt to create an identity 4`] = `
Array [
  Array [
    Object {
      "encryptedWif": "U2FsdGVkX19kQYx6vN6GahoZ9mbabreviated+=",
      "entropySource": Object {
        "encryptedEntropy": "U2FsdGVkX19kQYx6vN6GahoZ9mbabreviated+=",
        "timestamp": 946681200000,
      },
      "keyType": "ECDSA secp256k1",
      "path": "m/44'/60'/0'/0/0",
    },
  ],
]
`;

exports[`Registration action creators createIdentity should attempt to create an identity 5`] = `
Array [
  Array [
    Object {
      "data": Array [
        54,
        84,
        85,
        238,
        93,
        32,
        99,
        114,
        226,
        221,
        36,
        123,
        122,
        227,
        246,
        199,
        45,
        77,
        141,
        115,
        59,
        162,
        196,
        243,
        225,
        231,
        162,
        184,
        203,
        168,
        66,
        180,
      ],
      "type": "Buffer",
    },
  ],
]
`;

exports[`Registration action creators createIdentity should attempt to create an identity 6`] = `
Array [
  Array [
    "0x000test",
  ],
]
`;

exports[`Registration action creators createIdentity should display exception screen in case of error 1`] = `
Array [
  Object {
    "params": Object {
      "errorMessage": "Invalid entropy",
      "stackTrace": "TypeError: Invalid entropy
    at Object.entropyToMnemonic (/home/natascha/Documents/dev/four/smartwallet-app/node_modules/bip39/index.js:98:34)
    at Object.generateMnemonic (/home/natascha/Documents/dev/four/smartwallet-app/node_modules/jolocom-lib/js/utils/keyDerivation.js:6:18)
    at IdentityManager.Object.<anonymous>.IdentityManager.deriveChildKey (/home/natascha/Documents/dev/four/smartwallet-app/node_modules/jolocom-lib/js/identityManager/identityManager.js:26:38)
    at /home/natascha/Documents/dev/four/smartwallet-app/src/actions/registration/index.ts:68:43
    at step (/home/natascha/Documents/dev/four/smartwallet-app/node_modules/tslib/tslib.js:133:27)
    at Object.next (/home/natascha/Documents/dev/four/smartwallet-app/node_modules/tslib/tslib.js:114:57)
    at /home/natascha/Documents/dev/four/smartwallet-app/node_modules/tslib/tslib.js:107:75
    at tryCallTwo (/home/natascha/Documents/dev/four/smartwallet-app/node_modules/promise/lib/core.js:45:5)
    at doResolve (/home/natascha/Documents/dev/four/smartwallet-app/node_modules/promise/lib/core.js:200:13)
    at new Promise (/home/natascha/Documents/dev/four/smartwallet-app/node_modules/promise/lib/core.js:66:3)
    at Object.__awaiter (/home/natascha/Documents/dev/four/smartwallet-app/node_modules/tslib/tslib.js:103:16)
    at /home/natascha/Documents/dev/four/smartwallet-app/src/actions/registration/index.ts:61:106
    at /home/natascha/Documents/dev/four/smartwallet-app/tests/actions/registration/index.test.ts:134:13
    at step (/home/natascha/Documents/dev/four/smartwallet-app/node_modules/tslib/tslib.js:133:27)
    at Object.next (/home/natascha/Documents/dev/four/smartwallet-app/node_modules/tslib/tslib.js:114:57)
    at /home/natascha/Documents/dev/four/smartwallet-app/node_modules/tslib/tslib.js:107:75
    at tryCallTwo (/home/natascha/Documents/dev/four/smartwallet-app/node_modules/promise/lib/core.js:45:5)
    at doResolve (/home/natascha/Documents/dev/four/smartwallet-app/node_modules/promise/lib/core.js:200:13)
    at new Promise (/home/natascha/Documents/dev/four/smartwallet-app/node_modules/promise/lib/core.js:66:3)
    at Object.__awaiter (/home/natascha/Documents/dev/four/smartwallet-app/node_modules/tslib/tslib.js:103:16)
    at Object.<anonymous> (/home/natascha/Documents/dev/four/smartwallet-app/tests/actions/registration/index.test.ts:117:60)
    at Object.asyncFn (/home/natascha/Documents/dev/four/smartwallet-app/node_modules/jest-jasmine2/build/jasmine_async.js:82:37)
    at resolve (/home/natascha/Documents/dev/four/smartwallet-app/node_modules/jest-jasmine2/build/queue_runner.js:52:12)
    at new Promise (<anonymous>)
    at mapper (/home/natascha/Documents/dev/four/smartwallet-app/node_modules/jest-jasmine2/build/queue_runner.js:39:19)
    at promise.then (/home/natascha/Documents/dev/four/smartwallet-app/node_modules/jest-jasmine2/build/queue_runner.js:73:82)
    at <anonymous>
    at runMicrotasksCallback (internal/process/next_tick.js:121:5)",
    },
    "routeName": "Exception",
    "type": "Navigation/NAVIGATE",
  },
]
`;

exports[`Registration action creators savePassword should attempt to save the password in the keychain 1`] = `
Array [
  Object {
    "actions": Array [
      Object {
        "routeName": "Entropy",
        "type": "Navigation/NAVIGATE",
      },
    ],
    "index": 0,
    "key": undefined,
    "type": "Navigation/RESET",
  },
]
`;

exports[`Registration action creators savePassword should display exception screen in case of error 1`] = `
Array [
  Object {
    "params": Object {
      "errorMessage": "password could not be saved",
      "stackTrace": "mock pass error stack",
    },
    "routeName": "Exception",
    "type": "Navigation/NAVIGATE",
  },
]
`;

exports[`Registration action creators startRegistration should initiate the registration process 1`] = `
Array [
  Object {
    "actions": Array [
      Object {
        "routeName": "PasswordEntry",
        "type": "Navigation/NAVIGATE",
      },
    ],
    "index": 0,
    "key": undefined,
    "type": "Navigation/RESET",
  },
]
`;

exports[`Registration action creators submitEntropy should correctly navigate to route and provide the entropy 1`] = `
Array [
  Object {
    "actions": Array [
      Object {
        "routeName": "Loading",
        "type": "Navigation/NAVIGATE",
      },
    ],
    "index": 0,
    "key": undefined,
    "type": "Navigation/RESET",
  },
  Object {
    "type": "SET_LOADING_MSG",
    "value": "Encrypting and storing data locally",
  },
]
`;
